# menareants

./: .cvsignore  .gitignore  .in  API  AUTHORS  ChangeLog  DEVELOPPEURS  INSTALL  Makefile.am  Makefile.in  README  TODO  WIN32  aclocal.m4  autogen.sh  changelog.sh  clean.sh  config.h.in  configure  configure.ac  cross-configure.sh  svn_add
doc/: .cvsignore  ADMINS  index.html
lib/: .cvsignore  Batiments.cpp  Batiments.h  Channels.cpp  Channels.h  Colors.h  Debug.cpp  Debug.h  Defines.h  Doxyfile  LibConfig.cpp  LibConfig.h  Makefile.am  Makefile.in  Map.cpp  Map.h  Messages.h  Outils.cpp  Outils.h  Units.cpp  Units.h  UnitsList.h  v.sh
meta-server/: Doxyfile  Makefile.am  Makefile.in  clients.c  clients.h  config.c  config.h  database.c  database.h  main.c  main.h  menareants-meta-server.6  metaserver.conf  servers.c  servers.h  sockets.c  sockets.h
patchs/: 0001-now-we-change-all-gray-colors-to-player-colors-on-en.patch  README  bat.diff  fog.patch  lateral_bar.patch  menu.bugfix.diff  plane.diff
po/: Makefile.am  Makefile.in  fr.po
server/: .cvsignore  Batiments.cpp  Batiments.h  Channels.cpp  Channels.h  Commands.h  Config.cpp  Config.h  Debug.cpp  Debug.h  Defines.h  Doxyfile  IA.cpp  IA.h  InGame.cpp  InGame.h  Login.cpp  Main.cpp  Main.h  Makefile.am  Makefile.in  Map.cpp  Map.h  Server.cpp  Server.h  Units.cpp  Units.h  euroconqd.conf  menareants-server.6  menareantsd.conf  menareantsd.conf.in
server/maps/: Conquer.map  Islands.map  Japon.map  Makefile.in  caraibes.map  civil_war.map  europa_conquest.map  first.map  foret_fabuleuse.map  gna.map  ia.map  maps.list  prout.map  sodomie.map  team.map  test.map  three.map
src/: .cvsignore  AltThread.cpp  AltThread.h  Batiments.cpp  Batiments.h  Channels.cpp  Channels.h  Commands.h  Config.cpp  Config.h  Debug.cpp  Debug.h  Defines.h  Doxyfile  InGame.cpp  InGame.h  JoinGame.cpp  JoinGame.h  Login.cpp  Login.h  Main.cpp  Main.h  Makefile.am  Makefile.in  Map.cpp  Map.h  MapEditor.cpp  MapEditor.h  Menu.cpp  Menu.h  Outils.h  Resources.cpp  Resources.h  Sockets.cpp  Sockets.h  Sound.cpp  Sound.h  Timer.cpp  Timer.h  Units.cpp  (+7 more)
src/data/: Makefile  Makefile.in  list
src/data/anims/balise/: info
src/data/anims/brouillard/: info
src/data/anims/buttons/AI/: info
src/data/anims/buttons/account/: info
src/data/anims/buttons/add/: info
src/data/anims/buttons/back/: info
src/data/anims/buttons/cancel/: info
src/data/anims/buttons/create/: info
src/data/anims/buttons/host/: info
src/data/anims/buttons/join/: info
src/data/anims/buttons/kill/: info
src/data/anims/buttons/mcancel/: info
src/data/anims/buttons/mok/: info
src/data/anims/buttons/mplay/: info
src/data/anims/buttons/ok/: info
src/data/anims/buttons/radio/: info
src/data/anims/buttons/ready/: info
src/data/anims/buttons/refresh/: info
src/data/anims/buttons/refreshconf/: info
src/data/anims/buttons/remove/: info
src/data/anims/buttons/save/: info
src/data/anims/buttons/scores/: info
src/data/anims/cases/citysedead/: info
src/data/anims/cases/mer/: info
src/data/anims/cases/montagne/: info
src/data/anims/cases/terre/: info
src/data/anims/checkbox/: info
src/data/anims/downbutton/: info
src/data/anims/escarmouchebutton/: info
src/data/anims/intro/: info
src/data/anims/missionbutton/: info
src/data/anims/normalbutton/: info
src/data/anims/playbutton/: info
src/data/anims/quitbutton/: info
src/data/anims/units/boat/face/: info
src/data/anims/units/boeing/deployed/: info
src/data/anims/units/cavern/: info
src/data/anims/units/char/face/: info
src/data/anims/units/char/left/: info
src/data/anims/units/charfact/: info
src/data/anims/units/megalopole/: info
src/data/anims/units/mine/actived/: info
src/data/anims/units/missilauncher/deployed/: info
src/data/anims/units/missilauncher/missile_up/: info
src/data/anims/units/missilauncher/reployed/: info
src/data/anims/units/nuclearsearch/: info
src/data/anims/units/obelisk/: info
src/data/anims/units/train/left/: info
src/data/pics/: MAA.xpm
src/gui/: Boutton.cpp  Boutton.h  BouttonText.cpp  BouttonText.h  CheckBox.cpp  CheckBox.h  ChildForm.cpp  ChildForm.h  ColorEdit.cpp  ColorEdit.h  ComboBox.cpp  ComboBox.h  Component.cpp  Component.h  Cursor.cpp  Cursor.h  Edit.cpp  Edit.h  Form.cpp  Form.h  Fps.cpp  Fps.h  Image.cpp  Image.h  Label.cpp  Label.h  ListBox.cpp  ListBox.h  Memo.cpp  Memo.h  Menu.cpp  Menu.h  MessageBox.cpp  MessageBox.h  Object.h  ProgressBar.cpp  ProgressBar.h  ShowMap.cpp  ShowMap.h  SpinEdit.cpp  (+1 more)
src/tools/: Color.cpp  Color.h  Font.cpp  Font.h  Images.cpp  Images.h  Maths.cpp  Maths.h  Rectangle.h  SDL_gfxPrimitives.h  SDL_rotozoom.c  SDL_rotozoom.h  Vector2.h  Video.cpp  Video.h  effects_wave.cpp  effects_wave.h
test/: Makefile  README  combats.cpp  gna.map  make  map.cpp
tools/: maa_ircbot.py  proxy.c
win32/: build.sh  setup.sh
